# DroneIVSR

./: LICENSE  README.md  rbcarlane.py
Cpp/: Vector.cpp
Map/: code_multi_cols.world  codev2_multi_rows.world
Python/numpy/: SameVectorInCPP.py
check_state/: CMakeLists.txt  package.xml
check_state/launch/: code.launch
check_state/msg/: DroneState.msg
check_state/src/: node_state.cpp  sync_node.cpp
control_velpid/: CMakeLists.txt  package.xml
control_velpid/include/control_velpid/: captureGraph.h  pid_controller.h  pid_controllerv2.h  velpid_lib.h
control_velpid/launch/: circle_velpid.launch  controlv2.launch  hitlpoint2point.launch  hitlsquare.launch  square_path.launch  square_velpid.launch  velpid.launch  worldframe.launch
control_velpid/launch/example/: velpid(copy).launch
control_velpid/launch/hitl/: hitlpoint2point.launch  hitlsquare.launch  hitlsquare_notraj.launch
control_velpid/launch/pythonlaunch/: ducanh.launch  returnrs.launch
control_velpid/launch/sitl/: square_notrajectory.launch  worldframe.launch
control_velpid/scripts/: getResults.py  getRs2 (copy).py  getRs2.py  test.py
control_velpid/src/: circle_ctrl_vel.cpp  control_worldframe.cpp  controlv2.cpp  ctrl_vel.cpp  square_ctrl_vel.cpp  square_path (copy).cpp  square_path.cpp
control_velpid/src/hitl/: hitlone2fourpoints.cpp  points.cpp  square.cpp
control_velpid/src/latest/: control_worldframe.cpp  one2fourpoints.cpp  square_path.cpp
control_velpid/src/lib/: captureGraph.cpp  pbPlots.cpp  pid_controller.cpp  pid_controllerv2.cpp  supportLib.cpp  velpid_lib.cpp  velpid_lib.cpp.save
control_velpid/src/origin/: ctrl_vel (copy).cpp
dronefly/: CMakeLists.txt  package.xml
dronefly/include/dronefly/: callback.h  compute_pid.h  drone.h  pid.h
dronefly/launch/: dronerun.launch  sendpoints.launch  sitldronerun.launch
dronefly/rviz/: maker_points.rviz
dronefly/scripts/: sendpoint.py
dronefly/src/lib/: callback.cpp  compute_pid.cpp  drone.cpp  pid.cpp
dronefly/src/maincode/: control.cpp  markerpoint.cpp  sitl_takeoff.cpp  takeoff.cpp
offboardpy/: CMakeLists.txt  package.xml
offboardpy/launch/: hitl_offb.launch  sitl_offb.launch  sitl_offbv2.launch
offboardpy/scripts/: RunfileBag.py  commander.py  hitl_offb.py  runimage.py
offboardpy/scripts/pythongaas/: fly_circle.py  mavros_run.py
offboardpy/scripts/sitl/: offb_node.py  offb_nodev2.py
rpi_jetson/: CMakeLists.txt  package.xml
rpi_jetson/launch/: jetson_side.launch  wait_message.launch
rpi_jetson/src/: push_message.cpp  rpi_side.cpp  wait_message.cpp
state_pcl/: CMakeLists.txt  Guide.md  package.xml
state_pcl/launch/: rviz.launch  show_lidar.launch  show_pcl.launch
state_pcl/rviz/: show_lidar.rviz  show_pcl.rviz
state_pcl/src/: depth_pcl.cpp  local_pose.cpp  node_state.cpp  show_lidar.cpp  sync_node.cpp  visual_trajectory.cpp
state_pcl/src/copy/: node_lidar copy.cpp  sync_node (copy).cpp
state_pcl/src/hide/: pcl_test_core.cpp  pcl_test_core.h  pcl_test_node.cpp
tdbot/tdbot_description/: package.xml
tdbot/tdbot_description/launch/: rviz.launch
tdbot/tdbot_description/urdf/: materials.xacro  tdbot.gazebo  tdbot.xacro
tdbot/tdbot_gazebo/: CMakeLists.txt
tdbot_description/: CMakeLists.txt
tdbot_gazebo/: package.xml
tdbot_gazebo/launch/: tdbot_gazebo.launch
tdbot_gazebo/worlds/: mud.world  tdmap.world
tdbotv2/: CMakeLists.txt  package.xml
tdbotv2/launch/: robot_description.launch  world.launch
tdbotv2/urdf/: tdbotv2.xacro
test_velocity/: CMakeLists.txt  package.xml
test_velocity/include/test_velocity/: captureGraph.h  test_lib.hpp  vel_lib.h
test_velocity/launch/: default_testvel.launch  sitl_testvel.launch  testvel.launch
test_velocity/src/: default_test_vel.cpp  test_vel(org).cpp  test_vel.cpp  test_vel_org.cpp
test_velocity/src/lib/: captureGraph.cpp  pbPlots.cpp  supportLib.cpp  test_lib.cpp  vel_lib.cpp
wayspid/: CMakeLists.txt  package.xml
wayspid/cfg/: setDataRecord.cfg  setMotorFailure.cfg  setPID.cfg  setSafeD9.cfg  setTrajectory.cfg
wayspid/include/wayspid/: PID.h  data_record.h  motorfailurepub.h  safeD9.h  trajectory.h
wayspid/launch/: d9_hitl.launch  d9_sitl.launch  pid.launch
wayspid/src/: PID.cpp  data_record.cpp  fakeMocapPx4.cpp  motorfailurepub.cpp  safeD9.cpp  teleopKey.cpp  trajectory.cpp
